mysys/my_read.c
@@ -43,8 +43,14 @@ size_t my_read(File Filedes, uchar *Buffer, size_t Count, myf MyFlags)
 
   for (;;)
   {
-    errno= 0;					/* Linux doesn't reset this */
-    if ((readbytes= read(Filedes, Buffer, Count)) != Count)
+    errno= 0;
+#ifdef _WIN32
+    readbytes= my_win_read(Filedes, Buffer, Count);
+#else
+    readbytes= read(Filedes, Buffer, Count);
+#endif
+
+    if (readbytes != Count)
     {
       my_errno= errno ? errno : -1;
       DBUG_PRINT("warning",("Read only %d bytes off %lu from %d, errno: %d",
